Split local search into initialization and search phase